	  conversions between physical and virtual addresses (2013-8-9).
	* arch/arm/src/sama5/sam_hsmci.c and sam34/sam_hsmci.c:  Correct a
	  race condition in the SAMA5 HSCMI driver:  The tranfer done
	  interrupt was firing before the wait was started.  Fix this and
	  also backported the changes to SAM3/4 (untested).  Now HSCMI is
	  functional on the SAMA5 with DMA! (2013-8-10).
	* arch/arm/src/sam34/sam3u_periphclks.h: Correct a typo in a register
	  name (2013-8-10).
	* drivers/mmcsd/mmcsd_sdio.c:  Correction for a bad return value
	  when multiple block SDIO transfers are suppressed.  By Andrew Tridgell
	  via Lorenz Meier (2013-8-10).
	* drivers/serial/serial.c, drivers/usbdev/cdcacm.c, and
	  include/nuttx/fs/ioctl.h: Added support for FIONREAD and FIONWRITE,
	  added TERMIOS input / output processing support for UART and CDCACM
	  serial ports. Implemented by Mike Smith, Andrew Tridgell and Lorenz
	  Meier (2013-8-10).
	* drivers/usbdev/cdcacm.c:  Added FIONREAD and FIONWRITE to CDC/ACM
	  driver based on serial.c implementation. From Lorenz Meier
	  (2013-8-10).
	* arch/arm/src/stm32/Kconfig and stm32_serial.c:  Added option to
	  disable serial port reordering.  From Lorenz Meier (2013-8-10).
	* arch/arm/src/sama5/Kconfig, sam_ohci.c, and
	  arch/arm/src/sama5/sam_clockconfig.c:  Add a OHCI driver for the SAMA5.
	  Untested on initial check-in (2013-8-11).
	* include/nuttx/usb/usbhost.h, arch/arm/src/stm32, arch/arm/src/lpc17xx,
	  and include/nuttx/usb/usbhost.h, and nuttx/configs/<stm32-boards>:
	  Move prototype of usbhost_initialize() of usbhost.h and into
	  architecture specific files.  This is necessasrybecause some chips
	  (like the SAMA5) have multiple, different USB host interfaces
	  (2013-8-11).
	* drivers/usbhost/usbhost_hidkbd.c and usbhost_storage.c:  Correct some
	  compilation errors when pre-allocated class structures are used.  Also
	  eliminate some warnings about uninitialized variables (2013-8-11).